# geox

./: .coverage  .env.example  .gitignore  .gitmodules  000_INIT_ANCHOR.md  888_HOLD_RELEASE_SUMMARY.md  999_SEAL.md  999_SEAL_2026-03-28.md  AAA_GRADE_SEAL.md  AGENTS.md  ARIF.md  ATLAS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONSTITUTIONAL_PHYSICS_STACK.md  CONTRACTS_ANALYSIS.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_SEAL.md  DEPLOYMENT_STATUS.md  DEPLOY_COMMANDS.txt  Dockerfile  Dockerfile.local  Dockerfile.unified  EIC_SEAL.md  EXTERNAL_INTEGRATION_GUIDE.md  FEDERATION_LOOP_GEOX_SPACE.md  FORGE_HARDENED_VISION.md  GEOX_AGI_INSTRUCTIONS.md  GEOX_CONSTITUTIONAL_PHYSICS_STACK.md  GEOX_DESIGN_FORGE_SEAL.md  GEOX_GO_NOGO_RULES.md  GEOX_INTERPRODUCT_RISK_RULES.md  GEOX_MAP_RELEASE_NOTE.md  GEOX_ORTHOGONAL_TOOL_SPEC.md  GEOX_PRODUCT_VERSIONING.md  GEOX_SEAL_CHECKLIST.md  GEOX_SIMPLIFIED_MANIFEST.md  GEOX_STATUS_AND_FOCUS.md  (+71 more)
.archive/chaos_cleanup/: CHAOS_CLEANUP_MANIFEST.md
.github/workflows/: ci.yml  deploy-sites.yml  deploy-vps.yml  dual-deploy-fixed.yml  forge.yml
.playwright-mcp/: page-2026-04-09T01-05-30-674Z.yml  page-2026-04-09T01-06-29-716Z.yml  page-2026-04-09T01-37-19-460Z.yml
333/: QUANTUM_SABAR_PROTOCOL.md
999_vault/: 999_SEAL.json  repair_anchor.json
AGENTS/: IMPROVEMENT_BLUEPRINT.md  WIRE_PROTOCOL.md
REPORTS/: DAILY_AUDIT_2026-04-01.md  ENGINEERING_BLUEPRINT_2026-04-01.md  VALIDATOR_FEEDBACK_2026-04-01.md
WELL/: well_mcp_server.py
_archive/geox-gui-2026-04-02/: README.md  package.json  vite.config.ts
apps/: 1_welldesk.py  2_seismic_vision.py  3_earth_volume.py  4_judge_console.py  5_geoprobe.py
apps/attribute-audit/: index.html
apps/earth-volume/: index.html  manifest.json
apps/geox-mcp-visual/: cubeprobe_data.json  index.html  manifest.json  physiccore_data.json  seisvis_data.json  welldesk_data.json  (+1 more)
arifosmcp/: openai_bridge.py
compatibility/: __init__.py  legacy_aliases.py
contracts/: __init__.py  canonical_registry.py
control_plane/: __init__.py
core/: __init__.py  bias_detector.py  rock_physics_engine.py  rock_physics_engine.py.bak4  tool_registry.py
docs/: ACP_PROTOCOL.md  ANALOG_DIGITIZATION_MODE.md  ANALOG_DIGITIZATION_MODE_SPEC.md  ARCHITECTURE.md  ARCH_OPEN_EARTH_STACK.md  DEPLOYMENT.md  DESIGN_WEBSITE.md  GEOX_AGENT_SPEC_v2.md  GEOX_DIGITIZATION_RESEARCH.md  GEOX_PETROPHYSICS_BLUEPRINT.md  GEOX_PHYSICS9_FOUNDATION_BRIDGE.md  GEOX_TECHNICAL_ARCHITECTURE_v0.7.0.md  GEOX_TOOL_IMPROVEMENT_SPEC_v1.md  GEOX_UNIFIED_ARCHITECTURE.md  KIMI_SWARM_DESIGN_FORGE.md  METABOLIC_WORKFLOW.md  PHASE_A_FORGE_MANIFEST.md  PHASE_B_DESIGN_NOTE.md  PHYSICS_9_SPEC.md  POSITIONING.md  PROMPT_TO_VPS_AGENTS.md  README.md  REPO_CONSTITUTION.md  SOT_2026-04-12_CANONICAL.md  STRATEGIC_POSITIONING.md  STRATEGIC_UPGRADE_PATH_Q2_2026.md  VISION_INTELLIGENCE_ARCHITECTURE.md  ac_risk.md  deploy.md  mcp.html
execution_plane/: __init__.py
fixtures/: BOKOR_1_demo.las  BOKOR_2_demo.las
geox/: __init__.py  generate_report.py
geox-gui/: .eslintignore  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
geox-site/: index.html  nginx.conf  status.json
geox-site-p0/: index.html  status.json
geox_mcp/: __init__.py  config.json  server.py
infra/: geox-static.yml
internal/: prospect_judge.py
knowledge/: 001_INDICES.md  meta_trilemma_theorem.md
legacy_servers/: geox_acp_integrated.py  geox_gold_standard.py  geox_mcp_server.py  geox_sse_server.py  geox_unified_http.py
mcp/: __init__.py  fastmcp_server.py  server.py
provider_souls/: microsoft_copilot.json  minimax_m27.json
registries/: cross.py  earth3d.py  map.py  physics.py  prospect.py  section.py  time4d.py  well.py
registry/: graph.json
runtime_profiles/: gemini-2.0-flash.json
schemas/: asset_memory_record.json  las_manifest.json  well_desk_event_schema.json
scratch/: inspect_fastmcp.py  prune.py  test_fastmcp.py
scripts/: generate_live_sot.py  generate_public_registry.py  seed_evidence.py  test_judge.py  validate_registry.py
sealkit/: README.md  SEAL.md  manifest.json  manifest.sig  seal.sh
site/: apps.json  heavy-witness.html  index.html  nginx.conf
static/: llms.txt  robots.txt
telemetry/: VOID_20260409_061938_Ω.json
tests/: conftest.py  test_asset_memory_wave2.py  test_attributes.py  test_basin_charge_wave2.py  test_canonical_public_surface.py  test_cigvis_adapter.py  test_cigvis_adapter_runtime.py  test_claim_laundering_guard.py  test_contrast_canon.py  test_contrast_metadata.py  test_core_tools.py  test_depth_basis_footer_contract.py  test_e2e_mcp.py  test_earth_realtime_tool.py  test_end_to_end_mock.py  test_ensemble_residual_contracts.py  test_fail_closed_auth.py  test_geox_truth_state_golden.py  test_geox_well_hardening.py  test_hardened_agent.py  test_las_ingestor_wave2.py  test_legacy_alias_resolution.py  test_manifest_llms_parity.py  test_mcp_runtime_regressions.py  test_memory_and_public_surfaces.py  test_missing_curve_warning_contract.py  test_npd_eia_structured_errors.py  test_petro_ensemble_wave2.py  test_petrophysics_tools.py  test_physics_guard.py  test_plot_spec_validation.py  test_registry.py  test_schemas.py  test_seismic_visual_filter.py  test_sensitivity_wave2.py  test_single_line_interpreter.py  test_validator.py  test_visualization_wave2.py  test_volumetrics_wave2.py  test_wave2_capabilities.py  (+3 more)
tools/: extract_gsm_figures.py  georeference_map.py
traefik/: geox-static.yml
ui/: geox-dashboard.html  well-dashboard.html
wiki/: 888-hold.md  HORIZON_2026_Q2_MCP_FIRST.md  arifos.md  atmosphere.md  earth-intelligence.md  geodesy.md  governance.md  hazards.md  index.md  infrastructure.md  mobility.md  orchestration.md  sensing.md  terrain.md  time.md  water.md
(+751 files in other folders)
